--- a/client/src/components/Canvas/Canvas.scss
+++ b/client/src/components/Canvas/Canvas.scss
@@ -1,11 +1,14 @@
 .Canvas {
   display: flex;
+  position: relative;
   justify-content: center;
-  background-color: lightblue;
-
-  canvas {
-    border: 1px solid black;
-    background-color: white;
-    width: 900px;
+  background-color: white;
+  flex-wrap: wrap;
+  button {
+    display: block;
+    width: 100%;
+    height: 50px;
+    margin-top: 9px;
+    background-color: pink;
   }
 }
