--- a/client/src/components/Canvas/Canvas.scss
+++ b/client/src/components/Canvas/Canvas.scss
@@ -1,14 +1,15 @@
 .Canvas {
-  display: flex;
-  position: relative;
-  justify-content: center;
-  background-color: white;
-  flex-wrap: wrap;
-  button {
-    display: block;
-    width: 100%;
-    height: 50px;
-    margin-top: 9px;
-    background-color: pink;
+  width: 100vw;
+  height: 100vh;
+  background-color: lightblue;
+  padding-top: 20px;
+
+  .Container {
+    display: flex;
+    justify-content: center;
+    // justify-content: space-between;
+  }
+
+  canvas {
   }
 }
