--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -1,3 +1,35 @@
-.Message {
-  display: none;
+.MessageContainer {
+  display: flex;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-left: 13px;
+
+  img {
+    width: 14%;
+    height: 10%;
+    border-radius: 40px;
+  }
+  .Message {
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 70%;
+    padding-left: 10px;
+
+    h4 {
+      font-size: 14px;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+    }
+    p {
+      padding: 0;
+      font-size: 12.4px;
+      margin: 0;
+    }
+  }
+}
+
+.MessageContainer:nth-child(odd) {
+  background-color: lightgray;
 }
