--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
+@import url("https://fonts.googleapis.com/css?family=Oxygen&display=swap");
+
 .App {
   font-family: "Open Sans", sans-serif;
 }
