--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -5,17 +5,40 @@
   background-color: whitesmoke;
   height: 90vh;
 
+  .title {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    background-image: url("https://digitalsynopsis.com/wp-content/uploads/2017/02/beautiful-color-gradients-backgrounds-028-plum-plate.png");
+    background-size: cover; /* <------ */
+    background-repeat: no-repeat;
+
+    h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 21px;
+      letter-spacing: 3px;
+      font-family: "Oxygen", sans-serif;
+    }
+    color: black;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    padding: 5px 0;
+    text-transform: uppercase;
+  }
+
   .messages {
     display: list-item;
     overflow: scroll;
-    height: 93%;
+    height: 87%;
   }
 
   input {
     position: absolute;
     width: 100%;
     height: 6%;
-    font-size: 25px;
+    font-size: 17px;
     bottom: 1px;
   }
 }
