--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding-top: 8px;
   padding-bottom: 8px;
-  margin-left: 13px;
+  padding-left: 13px;
 
   img {
     width: 14%;
