--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -1,9 +1,9 @@
 .Chat {
   position: relative;
-  width: 300px;
+  width: 270px;
   border-right: none;
   background-color: whitesmoke;
-  height: 90vh;
+  height: 600px;
 
   .title {
     width: 100%;
