--- a/client/src/components/RoomList/RoomList.scss
+++ b/client/src/components/RoomList/RoomList.scss
@@ -4,7 +4,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: #424242;
+  position: relative;
 
+  height: 100vh;
   h1 {
     color: #ffffff;
   }
@@ -12,7 +14,6 @@
   padding-top: 5%;
   .Container {
     margin: 0;
-    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -36,5 +37,26 @@
       height: 50%;
       width: 20%;
     }
+  }
+
+  .myButton {
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+
+    background: linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+    background-color: #63b8ee;
+    border-radius: 6px;
+    border: 1px solid #3866a3;
+    cursor: pointer;
+    color: #14396a;
+    font-size: 15px;
+    font-weight: bolder;
+    padding: 6px 24px;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+  .myButton:hover {
+    transform: scale(1.2);
   }
 }
