--- a/client/src/components/NotificationModule/NotificationModule.scss
+++ b/client/src/components/NotificationModule/NotificationModule.scss
@@ -8,10 +8,12 @@
 
   h1 {
     transform: translate(-50%, -50%);
-    background-color: gray;
+    background-color: #444444;
     display: flex;
     justify-content: center;
+    border-radius: 45px;
     padding: 10px;
+    color: whitesmoke;
   }
 }
 
