--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -27,4 +27,9 @@
       font-size: 16px;
     }
   }
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
