--- a/client/src/components/WordBlock/WordBlock.scss
+++ b/client/src/components/WordBlock/WordBlock.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 5%; /* position the top  edge of the element at the middle of the parent */
   left: 50%; /* position the left edge of the element at the middle of the parent */
+  z-index: 999;
 
   transform: translate(-50%, -50%);
 
@@ -16,4 +17,8 @@
       width: 18px;
     }
   }
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
