--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -3,6 +3,8 @@
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 13px;
+  border-top: 1px solid #eaeaea;
+  // border-bottom: 1px solid black;
 
   img {
     width: 14%;
@@ -31,5 +33,5 @@
 }
 
 .MessageContainer:nth-child(odd) {
-  background-color: lightgray;
+  background-color: #e6e6e6;
 }
