--- a/client/src/components/RoomList/RoomList.scss
+++ b/client/src/components/RoomList/RoomList.scss
@@ -59,4 +59,25 @@
   .myButton:hover {
     transform: scale(1.2);
   }
+
+  .myButton2 {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+
+    background: linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+    background-color: #63b8ee;
+    border-radius: 6px;
+    border: 1px solid #3866a3;
+    cursor: pointer;
+    color: #14396a;
+    font-size: 15px;
+    font-weight: bolder;
+    padding: 6px 24px;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+  .myButton2:hover {
+    transform: scale(1.2);
+  }
 }
