--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -3,7 +3,8 @@
   width: 270px;
   border-right: none;
   background-color: whitesmoke;
-  height: 600px;
+  height: 605px;
+  border: 3px solid #333333;
 
   .title {
     width: 100%;
