--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -1,10 +1,10 @@
 .UserList {
-  border: 1px solid whitesmoke;
+  border: 3px solid #333333;
   width: 200px;
   background-color: white;
   position: absolute;
-  top: 1px;
-  right: -81px;
+  top: 25px;
+  right: -120px;
   z-index: 21;
 
   margin: 13px 0;
