--- a/client/src/components/Canvas/Canvas.scss
+++ b/client/src/components/Canvas/Canvas.scss
@@ -1,16 +1,34 @@
 .Canvas {
   width: 100vw;
   height: 100vh;
-  background-color: lightblue;
-  padding-top: 40px;
 
   .Container {
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
-    // justify-content: space-between;
+    align-content: center;
+    align-items: center;
   }
 }
 
 .CanvasContainer {
   position: relative;
+  box-sizing: border-box;
+  border: 3px solid #333333;
+  margin-left: 6px;
+}
+
+.Canvas::after {
+  content: "";
+  background-image: url(https://i.pinimg.com/originals/b4/bf/af/b4bfafa2dccc4cf3fe24f774b3f13b12.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  opacity: 0.7;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
