--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -5,6 +5,7 @@
   background-color: whitesmoke;
   height: 605px;
   border: 3px solid #333333;
+  overflow: hidden;
 
   .title {
     width: 100%;
@@ -33,6 +34,7 @@
     display: list-item;
     overflow-y: scroll;
     height: 87%;
+    box-sizing: content-box;
   }
 
   input {
