--- a/client/src/components/RoomList/RoomList.scss
+++ b/client/src/components/RoomList/RoomList.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
   h1 {
     color: #ffffff;
     text-shadow: 2px 2px black;
@@ -17,7 +17,7 @@
     margin: 0;
     height: 600px;
 
-    overflow: scroll;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
