--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,10 @@
 
 @import url("https://fonts.googleapis.com/css?family=Oxygen&display=swap");
 
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 .App {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow: hidden;
 }
 /* GLOBAL  */
