--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -1,39 +1,35 @@
 .UserList {
-  border: 3px solid #333333;
-  width: 200px;
-  background-color: white;
-  position: absolute;
-  top: 25px;
-  right: -120px;
-  z-index: 21;
+  width: 80px;
+  background-color: #1f2542;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  color: white;
 
-  margin: 13px 0;
-  h4 {
-    margin: 0;
-    text-transform: uppercase;
-    text-align: center;
-    background-image: url("https://digitalsynopsis.com/wp-content/uploads/2017/02/beautiful-color-gradients-backgrounds-028-plum-plate.png");
-    background-size: cover; /* <------ */
-    background-repeat: no-repeat;
-    padding: 5.5px;
-  }
-  .user-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 7px;
-    background-color: #f2f2f2;
-    color: black;
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px;
+  align-items: center;
 
-    h3,
-    p {
-      margin: 0;
-      font-size: 16px;
-    }
+  h2 {
+    font-size: 17px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid white;
   }
 
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  #parent {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    padding-left: 14px;
+    height: 391px;
+  }
+
+  #child {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
+  }
 }
