css elements change

--- a/client/src/components/RoomList/RoomList.scss
+++ b/client/src/components/RoomList/RoomList.scss
@@ -29,6 +29,7 @@
     height: 10%;
     justify-content: space-evenly;
     margin-bottom: 17px;
+    margin: 0 auto;
 
     h3 {
       width: 50%;
