--- a/client/src/components/ProfileCard/ProfileCard.scss
+++ b/client/src/components/ProfileCard/ProfileCard.scss
@@ -1,12 +1,19 @@
 .ProfileCard {
   padding-bottom: 10px;
-
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  .crown {
+    margin-bottom: -6px;
+    width: 80%;
+  }
   .imageContainer {
     width: 52px;
     height: 52px;
     overflow: hidden;
     border-radius: 50%;
     margin: 0 auto;
+
     img {
       width: 100%;
       height: 100%;
