--- a/client/src/components/RoomList/RoomList.scss
+++ b/client/src/components/RoomList/RoomList.scss
@@ -63,9 +63,6 @@
     text-decoration: none;
     transition: all 0.2s ease-in-out;
   }
-  .myButton:hover {
-    transform: scale(1.2);
-  }
 
   .myButton2 {
     position: absolute;
@@ -84,7 +81,30 @@
     transition: all 0.2s ease-in-out;
   }
 
+  .myButton3 {
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
+    text-shadow: none;
+    background: black;
+    background-color: #63b8ee;
+    border-radius: 6px;
+    cursor: pointer;
+    color: #14396a;
+    font-size: 15px;
+    font-weight: bolder;
+    padding: 6px 24px;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .myButton:hover {
+    transform: scale(1.2);
+  }
   .myButton2:hover {
+    transform: scale(1.2);
+  }
+  .myButton3:hover {
     transform: scale(1.2);
   }
 }
