--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -4,6 +4,7 @@
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   color: white;
+  transition: all 0.2s ease-in-out;
 
   display: flex;
   flex-direction: column;
@@ -17,6 +18,8 @@
   }
 
   #parent {
+    transition: all 0.2s ease-in-out;
+
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -26,6 +29,8 @@
   }
 
   #child {
+    transition: all 0.2s ease-in-out;
+
     width: 100%;
     height: 100%;
     overflow-y: scroll;
