added hover effects

--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -38,3 +38,24 @@
     box-sizing: content-box; /* So the width will be 100% + 17px */
   }
 }
+.tooltip {
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 11231;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
