--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -40,13 +40,14 @@
   }
 
   #child {
-    transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-out;
 
     width: 100%;
     height: 100%;
     overflow-y: scroll;
     padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
     box-sizing: content-box; /* So the width will be 100% + 17px */
+    overflow-x: hidden;
   }
 }
 .tooltip {
