--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-shrink: 0;
   height: 55px;
-  margin-top: 26px;
+  margin-top: 12px;
 
   .imageContainer {
     border-radius: 50%;
@@ -15,6 +15,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: space-between;
+    justify-content: space-between;
   }
   img {
     width: 50px;
