--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -9,8 +9,8 @@
 
   .imageContainer {
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 42px;
+    height: 42px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -19,8 +19,7 @@
     justify-content: space-between;
   }
   img {
-    width: 50px;
-    height: 50px;
+    width: 100%;
   }
 
   .Message {
