--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -30,7 +30,7 @@
 
   #parent {
     transition: all 0.2s ease-in-out;
-
+    display: flex;
     width: 100%;
     height: 100%;
     overflow: hidden;
