--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -48,6 +48,7 @@
     padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
     box-sizing: content-box; /* So the width will be 100% + 17px */
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
 .tooltip {
