--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -14,3 +14,12 @@ h1,
 h4 {
   text-transform: capitalize;
 }
+
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* Chrome/Safari/Webkit */
+  }
+}
