--- a/client/src/components/ProfileCard/ProfileCard.scss
+++ b/client/src/components/ProfileCard/ProfileCard.scss
@@ -1,15 +1,16 @@
 .ProfileCard {
-  padding-bottom: 10px;
+  padding-bottom: 2px;
   align-items: center;
   display: flex;
   flex-direction: column;
+  position: relative;
   .crown {
     margin-bottom: -6px;
-    width: 80%;
+    width: 65%;
   }
   .imageContainer {
-    width: 52px;
-    height: 52px;
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     border-radius: 50%;
     margin: 0 auto;
