--- a/client/src/components/ProfileCard/ProfileCard.scss
+++ b/client/src/components/ProfileCard/ProfileCard.scss
@@ -5,8 +5,9 @@
   flex-direction: column;
   position: relative;
   .crown {
-    margin-bottom: -6px;
+    margin-bottom: -11px;
     width: 65%;
+    z-index: 2;
   }
   .imageContainer {
     width: 50px;
