--- a/client/src/components/UpdatedChat/UpdatedChat.scss
+++ b/client/src/components/UpdatedChat/UpdatedChat.scss
@@ -7,6 +7,7 @@
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   overflow: hidden;
+  box-shadow: 0px 2px 4px #000000;
 
   .column-reverse {
     display: flex;
