--- a/client/src/components/UserList/UserList.scss
+++ b/client/src/components/UserList/UserList.scss
@@ -5,6 +5,7 @@
   border-bottom-left-radius: 25px;
   color: white;
   transition: all 0.2s ease-in-out;
+  box-shadow: 0px 2px 4px #000000;
 
   display: flex;
   flex-direction: column;
